# Image-shooter

./: .gitignore  README.md  \
.github/workflows/: main.yaml
backend/: .gitignore  Makefile  config.toml  download.py  main.py  pyproject.toml  requirements.txt
backend/.github/workflows/: main.yaml
backend/source_app/Detectors/: Detector.py  Detectron2.py  FactoryDetector.py
backend/source_app/Logger/: logger.py
backend/source_app/api/: main.py
backend/source_app/api/routers/: routers_loader.py
backend/source_app/utils/: Drawer.py
backend/src/Detectors/: Detector.py  Detectron2.py  FactoryDetector.py
backend/src/utils/: Config.py  config.py
backend/tests/: test_config.py  test_detectron2.py  test_drawer.py  test_image_router.py
backend/tests/config/: mock_config.toml
backend/tests/sample_image/: from.txt
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: main.py  pyproject.toml
frontend/shooter/: manage.py  pyproject.toml
frontend/shooter/shooter/: asgi.py  settings.py  urls.py  wsgi.py
frontend/shooter/uploader/: apps.py  urls.py  views.py
frontend/shooter/uploader/static/uploader/: script.js  style.css
frontend/shooter/uploader/templates/uploader/: index.html
frontend/shooter/uploader/tests/: test_e2e_drag_drop.py
frontend/tests/: test_hello_word.py
script/: build_docker_backend.sh  build_docker_compose.sh  build_docker_frontend.sh  pyproject_to_requirements.sh
