[project]
name = "shooter-backend"
version = "0.1.0"
description = "Backend for the Shooter game"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "supervision>=0.25.1",
    "toml>=0.10.2",
    "pycocotools>=2.0.9",
    "requests>=2.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]


cpu = [
  "torch>=2.0.1",
  "torchvision>=0.15.2",
]
gpu = [
  "torch>=2.0.1",
  "torchvision>=0.15.2",
]

detectron2 = [
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "B008", "N806"]
fixable = ["ALL"]
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "-ra -q --tb=short --cov-report=term-missing --cov=src --cov-fail-under=70"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "manual: Run only manual tests",
]

[tool.coverage.run]
skip_empty = true
show_missing = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu117", marker = "extra == 'gpu' and extra != 'cpu'" },
    { index = "pytorch-cpu", marker = "extra == 'gpu' and extra != 'gpu'" }
]
torchvision = [
    { index = "torchvision-cu117", marker = "extra == 'gpu' and extra != 'cpu'" },
    { index = "torchvision-cpu", marker = "extra == 'cpu' and extra != 'gpu'" }
]
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchvision-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "torchvision-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"


#set mark
