[project]
name = "shooter-frontend"
version = "0.1.0"
description = "Frontend for the Shooter game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.2",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shooter", "uploader"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "B008", "N806"]
fixable = ["ALL"]
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
disallow_incomplete_defs = true


[tool.pytest.ini_options]
DJANG_SETTINGS_MODULE = "shooter.settings"
addopts = "-ra -q --tb=short --mypy --mypy-ignore-missing-imports"
testpaths = ["frontend/shooter/uploader/tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "isort>=6.0.1",
    "selenium>=4.33.0",
    "pytest-mypy>=1.0.1",
]

#set mark
